# db_norm_checker

./: .gitignore  LICENSE  README.md  algorithm.py  algorithm1.py  connection.py  data.json  example.py  extract_schema.py  normalizer.py  pyproject.toml  read_json.py  requirements.txt  run.sh  test_output.json  verify_schema_dependencies.py
src/db_normalizer/: __init__.py  algorithm.py  cli.py  connection.py  extract_schema.py  verify_schema_dependencies.py
src/db_normalizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/fixtures/: ecommerce_dependencies.json  test_dependencies.json  test_schema.json  transitive_dependencies.json  transitive_schema.json
